@@ -9,7 +9,10 @@ Version CVS HEAD (?)
     curves
   * fine tuning of the EGADSR envelope
   * LSCP server:
-    - fixed some crashs (patch by Grigor Iliev, fixes #19)
+    - fixed some crashes (patch by Grigor Iliev, fixes #19)
+  * volume of release triggered samples now depends on note-on
+    velocity, note length and gig parameter "release trigger decay"
+    instead of note-off velocity.
 
 Version 0.3.1 (24 May 2005)
 
